@startuml dataModel_v2

' ENUMS
enum CoinValue {
    ONE_CENT,
    TWO_CENTS,
    FIVE_CENTS,
    TEN_CENTS,
    TWENTY_CENTS,
    FIFTY_CENTS,
    ONE_EURO,
    TWO_EUROS
}

enum CoinCountry {
    AUSTRIA, 
    BELGIUM, 
    CYPRUS, 
    GERMANY, 
    ESTONIA, 
    SPAIN, 
    FINLAND, 
    FRANCE,
    GREECE, 
    IRELAND, 
    ITALY, 
    LITHUANIA, 
    LUXEMBOURG, 
    LATVIA, 
    MALTA,
    NETHERLANDS, 
    PORTUGAL, 
    SLOVENIA, 
    SLOVAKIA, 
    SAN_MARINO, 
    VATICAN_CITY,
    MONACO, 
    ANDORRA
}

enum Mint {
    BERLIN, 
    MUNICH, 
    STUTTGART, 
    KARLSRUHE, 
    HAMBURG
}

' DESCRIPTION
class CoinDescription {
    - text : String
}

' INTERFACES
interface CoinComponent {
    + getId() : String
    + getDescription() : String
    + isComplete() : boolean
    + getTotalValue() : int
    + getCoinCount() : int
    + getAllCoins() : List<EuroCoin>
}

interface CoinComposite extends CoinComponent{
    + add(component : CoinComponent) : void
    + remove(component : CoinComponent) : void
    + getChildren() : List<CoinComponent>
    + addCoin(coin : EuroCoin) : void
    + addCollection(collection : CoinCollection) : void
}

' COIN
class EuroCoin {
    - id : String
    - year : int
}

EuroCoin --> "1" CoinValue : -value
EuroCoin --> "1" CoinCountry : -mintCountry
EuroCoin --> "1" CoinDescription : -description
EuroCoin --> "1" Mint : -mint
EuroCoin ..|> CoinComponent : implements

' COLLECTIONS (KONKRET)
class CoinCollection {
    - id : String
    - name : String
    + getCoins() : List<EuroCoin>
}
CoinCollection ..|> CoinComposite : implements
CoinCollection --> "*" CoinComponent : -coins

class CollectionGroup {
    - id : String
    - name : String
    + getCollections() : List<CoinCollection>
}
CollectionGroup ..|> CoinComposite : implements
CollectionGroup --> "*" CoinCollection : -collections

' BUILDER
class EuroCoinBuilder {
    - year : int
    - value : CoinValue
    - mintCountry : CoinCountry
    - description : CoinDescription
    - mint : Mint

    + setYear(year : int) : EuroCoinBuilder
    + setValue(value : CoinValue) : EuroCoinBuilder
    + setMintCountry(mintCountry : CoinCountry) : EuroCoinBuilder
    + setDescription(description : CoinDescription) : EuroCoinBuilder
    + setMint(mint : Mint) : EuroCoinBuilder
    + build() : EuroCoin
}
EuroCoinBuilder ..> EuroCoin : builds

' USER
class User {
    - id : String
    - name : String
}

User "1" --> "0..*" CollectionGroup : -rootCollections

@enduml
